# c-plus-plus-for-programmers

./: .gitignore  LICENSE  LICENSE.txt  README.md
h18/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp  oppgave3.cpp  oppgave4.cpp  oppgave5.cpp
h19/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp  oppgave3.cpp  oppgave4.cpp  oppgave5.cpp
oving1/: CMakeLists.txt  oppgavea.cpp  oppgaveb.cpp
oving2/: CMakeLists.txt  oppgave1a.cpp  oppgave1b.cpp  oppgave2.cpp  oppgave3.cpp  oppgave4.cpp  oppgave5.cpp  oppgave6.cpp
oving3/: CMakeLists.txt  circle.cpp  circle.hpp  circle_test.cpp  commodity.cpp  commodity.hpp  oppgave4.cpp
oving4/: CMakeLists.txt  oppgave1.cpp
oving5/: CMakeLists.txt  chess.cpp
oving6/: CMakeLists.txt  chess.cpp  example6.cpp
oving7/: CMakeLists.txt  fraction.cpp  fraction.hpp  fraction_test.cpp  set.cpp  set.hpp  set_test.cpp
oving8/: CMakeLists.txt  main.cpp  oppgave1.cpp  pair.hpp
oving9/: CMakeLists.txt  oving9.cpp
stl-algorithms/: CMakeLists.txt  all_of  all_of.cpp  any_of  any_of.cpp  find.cpp  find_end.cpp  find_first_of.cpp  find_if.cpp  find_if_not.cpp  for_each  for_each.cpp  none_of  none_of.cpp  vector.hpp
v19/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp  oppgave3.cpp  oppgave4.cpp  oppgave5.cpp
