cmake_minimum_required(VERSION 2.8)

project(oving2)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra")

add_executable(oppgave1a oppgave1a.cpp)

add_executable(oppgave1b oppgave1b.cpp)

add_executable(oppgave2 oppgave2.cpp)

add_executable(oppgave3 oppgave3.cpp)

add_executable(oppgave4 oppgave4.cpp)

add_executable(oppgave5 oppgave5.cpp)

add_executable(oppgave6 oppgave6.cpp)