cmake_minimum_required(VERSION 2.8)

project(v19)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra")

add_executable(oppgave1 oppgave1.cpp)

add_executable(oppgave2 oppgave2.cpp)

add_executable(oppgave3 oppgave3.cpp)

add_executable(oppgave4 oppgave4.cpp)

add_executable(oppgave5 oppgave5.cpp)